(feat) delete weekly rate route
